# ajp-agent-journal-protocol

./: .gitignore  .pre-commit-config.yaml  AJP_MASTER_SPEC.md  Dockerfile  Makefile  README.md  SKILL.md  docker-compose.yml  otel-config.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
references/: github-setup.md  phase4-session.md  phase7-session.md  phase8-session.md  rebuild-session-2025.md
scripts/: verify_ajp.py  verify_tests.sh
src/ajp/: __init__.py
src/ajp/analytics/: __init__.py  failure_interceptor.py  gap_analyzer.py  ops_console.py  semantic_search.py
src/ajp/benchmarks/: __init__.py
src/ajp/compliance/: __init__.py
src/ajp/core/: __init__.py  anchoring.py  chain.py  entry.py  merkle.py  rate_limiter.py  retention.py  sanitizer.py  secret_manager.py
src/ajp/integrations/: __init__.py  opentelemetry.py  postgres.py  temporal.py  vault.py
src/ajp/sdk/: __init__.py  client.py
src/ajp/security/: __init__.py  hsm.py  orchestrator.py  vault_client.py
src/ajp/server/: __init__.py  api.py  app.py
src/ajp/service/: __init__.py  buffer.py  journal.py  storage.py  writer.py
src/ajp/tests/: test_phase1.py  test_phase10.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_phase9.py
src/ajp/workflow/: __init__.py  engine.py  otel_bridge.py
src/ajp_agent_journal_protocol.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/core/: data_retention.py  journal_chain.py
src/security/: manager.py
src/workflow/: workflow_definition.py  workflow_engine.py
