[project]
name = "ajp-agent-journal-protocol"
version = "0.7.0"
description = "Agent Journal Protocol - Tamper-evident, compliance-ready journaling for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "AJP Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
]

dependencies = [
    "cryptography>=41.0.0",
    "ed25519>=1.5",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "bandit>=1.7",
    "safety>=2.0",
    "coverage>=7.0",
]
server = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.24.0",
]
sdk = [
    "httpx>=0.24.0",
    "httpx-sse>=0.4.0",
]
postgres = [
    "asyncpg>=0.28.0",
    "alembic>=1.12.0",
    "sqlalchemy>=2.0.0",
]
vault = [
    "hvac>=2.0.0",
]
temporal = [
    "temporalio>=1.5.0",
]
opentelemetry = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]
all = [
    "ajp-agent-journal-protocol[dev,server,sdk,postgres,vault,temporal,opentelemetry]",
]

[project.scripts]
ajp-server = "ajp.server.app:create_app"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["src/ajp/tests"]
asyncio_mode = "auto"
